@@ -1477,12 +1477,15 @@ public class TextAreaPainter extends JComponent implements TabExpander
 
 			if(textArea.isOverwriteEnabled())
 			{
-				gfx.drawLine(caretX, y + lineHeight - 1,
-					     caretX + textArea.charWidth,
-					     y + lineHeight - 1);
+				if (thickCaret) 
+					gfx.fillRect(caretX, y + lineHeight - 4, textArea.charWidth, 3);
+				
+				else  gfx.drawLine(caretX, y + lineHeight - 1, 
+					caretX + textArea.charWidth, y + lineHeight - 1);
 			}
 			else if(blockCaret)
-				gfx.drawRect(caretX, y + charOffset, textArea.charWidth - 1, charHeight - 1);
+				gfx.drawRect(caretX, y + charOffset, 
+					textArea.charWidth - 1, charHeight - 1);
 			else
 			{
 				if (thickCaret) 
